2001-04-23  Dave Peticolas  <dave@krondo.com>

	* src/engine/Query.c (xaccQueryGetSplitsUniqueTrans): fix bug

	* src/engine/Account.c (xaccAccountSetPriceSrc): fix bug

2001-04-23  Kevin Finn  <kevinfinn@mediaone.net>

	* src/engine/Account.c src/engine/Account.h: added
	xaccAccountGetBalanceAsOfDate and
	xaccAccountGetShareBalanceAsOfDate, to determine the balance of an
	account on a given date.

	* src/gnome/window-reconcile.c: added appropriate callbacks so
	that changes to the startRecnWindow date entry will update the
	ending balance amount entry.  Once the user manually updates the
	ending balance amount, the automatic updates will no longer occur
	if the date entry is changed again.  Changed
	gnc_get_reconcile_info to use the *AsOfDate funcs if possible.

2001-04-22  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/transaction-report.scm: More work on subtotal
	options.

	* src/scm/report/net-worth-timeseries.scm: Add links to new
	reports on bars.

	* src/scm/options.scm, html-utilities.scm: Fix bugs with wrong
	report names.

2001-04-22  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-find-transactions.c: remove tags notebook page.

2001-04-22  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/income-expense-graph.scm: Add links to new
	reports on bars.

2001-04-22  Dave Peticolas  <dave@krondo.com>

	* src/scm/report/transaction-report.scm: use new api for
	changing sensitivity

	* src/guile/gnc.gwp: wrap new function

	* src/guile/global-options.c (gnc_set_option_selectable_by_name):
	new func

	* src/guile/option-util.c
	(gnc_option_db_set_option_selectable_by_name): new func

	* src/gnome/dialog-options.c (gnc_set_option_selectable): new func

	* src/gnome/dialog-account.c (gnc_type_list_unselect_cb): fix bug

	* src/scm/report/register.scm: use query option to store query

	* src/gnome/window-register.c (report_helper): don't copy
	the query -- it's converted to scm now

	* src/guile/gnc-helpers.c: more work on scm<->query
